--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "dependencies": {
     "body-parser": "~1.0.1",
     "caminte": "^0.2.7",
-    "express": "~4.0.0",
-    "mongoose": "~3.6.13"
+    "express": "^4.13.4",
+    "redis": "^2.6.0-1",
   }
 }
