--- a/package.json
+++ b/package.json
@@ -8,6 +8,6 @@
     "body-parser": "~1.0.1",
     "caminte": "^0.2.7",
     "express": "^4.13.4",
-    "redis": "^2.6.0-1"
+    "redis": ">=3.1.1"
   }
 }
